# Ruminate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  main.cpp
Dependencies/: list.txt
Examples/: CMakeLists.txt  addition.cpp  batchs.cpp  dropout.cpp
LayerModules/: c_layers.hpp
Ruminate/: CMakeLists.txt  a_funcs.hpp  c_layers.hpp  layers.hpp  net.hpp
Ruminate/HelperFiles/: a_funcs.hpp  cnn_helpers.hpp  rng_helpers.hpp
Ruminate/LayerModules/: ann_layers.hpp  cnn_layers.hpp  fc_layers.hpp  generic_layers.hpp
Ruminate/include/: core.hpp  layers.hpp  net.hpp  rum_core.hpp
Ruminate/include/HelperFiles/: a_funcs.hpp  rng_helpers.hpp
Ruminate/include/LayerModules/: ann_layers.hpp  generic_layers.hpp
Ruminate/src/: layers.cpp  net.cpp
Ruminate/src/HelperFiles/: a_funcs.cpp  rng_helpers.cpp
Ruminate/src/LayerModules/: ann_layers.cpp  generic_layers.cpp
examples/: addition.cpp  batchs.cpp  dropout.cpp
include/: a_funcs.h  a_funcs.hpp  core.h  core.hpp  layers.h  layers.hpp  net.h  net.hpp  rng_helpers.h  rng_helpers.hpp
include/CUDA/: dot.cu
include/modules/: ann_layers.h  ann_layers.hpp  cnn_layers.hpp  generic_layers.h  generic_layers.hpp
src/: layer.cpp  layers.cpp  net.cpp
src/header_defs/: a_funcs.cpp  net.cpp  rng_helpers.cpp
src/modules/: ann_layers.cpp  ann_layers.h  ann_layers.hpp  generic_layers.cpp  generic_layers.hpp
